# RTV_ML_PROJECT

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: eval_questions.yaml  prompts.yaml  settings.py
docs/: SYSTEM_ARCHITECTURE.md
outputs/: eval_report.md  eval_results.json  evaluation_results.json
scripts/: run_evaluation.py  setup.py
src/: __init__.py
src/agents/: __init__.py  rag_agent.py  sql_agent.py
src/analysis/: __init__.py  data_analysis.py
src/api/: app.py  middleware.py  routes.py  schemas.py
src/api/static/: index.html
src/core/: __init__.py  circuit_breaker.py  exceptions.py  logger.py  observability.py  rate_limiter.py  retry.py  sanitizer.py  tracing.py
src/db/: __init__.py  connection_pool.py  duckdb_manager.py  schema_context.py
src/evaluation/: __init__.py  judge.py  metrics.py  report.py  runner.py
src/orchestrator/: __init__.py  memory.py  router.py  state.py
src/rag/: __init__.py  document_loader.py  embeddings.py  hyde.py  pipeline.py  qdrant_store.py  retriever.py  vector_store.py
tests/integration/: test_api.py
tests/unit/: test_document_loader.py  test_duckdb_manager.py  test_vector_store.py
